Generate feature facades without javac internals